<resources>
    <string name="app_name">Obligatorio</string>
    <string name="titulo_inicio">Bienvenido! Si ya posee cuenta inicie sesión, sino, regístrese.</string>
    <string name="iniciar_sesion_caps">Iniciar Sesión</string>
    <string name="registrarse_caps">Registrarse</string>
    <string name="email">E-mail:</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="contraseña">Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="exitos">Éxitos!</string>
    <string name="mensajeRegistroExitoso">Se ha registrado un usuario correctamente.</string>
    <string name="aceptar">Aceptar</string>
    <string name="errorRegistro">Error en el Registro</string>
    <string name="error">Error</string>
    <string name="pleaseLogIn">Estimado usuario, por favor inicie sesión</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="usuarioExitoso">Bienvenido!!!!</string>
    <string name="errorDeTimeoutEnLogin">El servidor no pudo procesar su solicitud. Por favor intente más tarde. (Timeout Error)</string>
    <string name="usuarioOContraseñaIncorrecta">El usuario o la contraseña no coinciden. Por favor reintente ingresar sus credenciales.</string>
    <string name="title_activity_hub">HubActivity</string>
    <string name="mantener">Mantener sesión iniciada</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="id">ID: </string>
    <string name="preferencias">Preferencias </string>
    <string name="fecha">FECHA: </string>
    <string name="estado">ESTADO: </string>
    <string name="estaSeguroCerrarSesion">¿Está seguro que desea cerrar sesión?</string>
    <string name="cancelar">Cancelar</string>
    <string name="salir">Salir</string>
    <string name="origen">ORIGEN:</string>
    <string name="destino">DESTINO:</string>
    <string name="cargando">Cargando...</string>
    <string name="cargando_2">Cargando. Por favor espere.</string>
    <string name="errorFatalDeConexion">Ha ocurrido un error fatal obteniendo los datos del servidor. Por favor revise su conexión y reinténtelo</string>
    <string name="title_activity_mapa_general">Mapa General</string>
    <string name="reminder">Presione el pedido para ver sus detalles y trabajar con él, mantenga presionada la lista para ver el mapa de pedidos.</string>
    <string name="nohayconexion">Su dispositivo no posee conexión a internet. Se procederá a usar datos locales si es posible.</string>
    <string name="estado_actual">Estado actual:</string>
    <string name="boton_update">Cambiar a estado:</string>
    <string name="pedido_finalizado">Pedido Finalizado</string>
    <string name="errorDeClienteEnUpdate">Error de cliente al procesar la solicitud. Compruebe los datos y reinténtelo</string>
    <string name="exitocambiandodeestado">Exito cambiando de estado</string>
    <string name="vehiculo_marca">Ingrese marca de vehículo*</string>
    <string name="vehiculo_modelo">Ingrese el modelo del vehículo*</string>
    <string name="vehiculo_matricula">Ingrese la matrícula del vehículo*</string>
    <string name="vehiculo_chofer">Ingrese el nombre completo del chofer*</string>
    <string name="campovacio">El campo no puede permanecer vacio</string>
    <string name="fecha_de_recepcion">Ingrese fecha de recepcion - Formato yyyy-MM-dd hh:mm:ss</string>
    <string name="ingrese_observaciones">Ingrese observaciones*</string>
    <string name="ingrese_nombre_del_receptor">Ingrese nombre del receptor*</string>

    <string name="horaactual">Hora actual:</string>
    <string name="alerta">Alerta</string>
    <string name="wishtogoback">Desea volver a los detalles de su pedido?</string>
    <string name="title_activity_mapa_detalle">Mapa Detallado</string>
    <string name="nombre_receptor">Nombre del receptor:</string>
    <string name="observaciones_de_recepcion">Observaciones de recepcion:</string>
    <string name="fecha_del_receptor">Fecha de recepcion del pedido:</string>
    <string name="veh_marca">Vehiculo marca:</string>
    <string name="veh_matricula">Vehiculo matricula:</string>
    <string name="veh_chofer">Vehiculo Chofer:</string>
    <string name="veh_modelo">Vehiculo modelo:</string>
    <string name="avisodepedidoinminente">Aviso de pedido inminente</string>
    <string name="pronto">Pedido en pocos minutos</string>


</resources>
