<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99AF94DF">

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="352dp"
        android:layout_height="58dp"
        android:layout_marginTop="170dp"
        android:text="@string/titulo_inicio"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/adamina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <Button
        android:id="@+id/iniciarSesion"
        android:layout_width="145dp"
        android:layout_height="71dp"
        android:layout_marginTop="155dp"
        android:layout_marginRight="45dp"
        android:text="@string/iniciar_sesion_caps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"></Button>

    <Button
        android:id="@+id/registrarse"
        android:layout_width="148dp"
        android:layout_height="70dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="155dp"
        android:text="@string/registrarse_caps"
        app:layout_constraintEnd_toStartOf="@+id/iniciarSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>